--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,10 +40,15 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+
+    /* Custom */
+    --text-color: black;
+    --secondary-color: rgb(29, 78, 137);
+    --secondary-color-light: rgba(29, 78, 137, 0.9);
   }
   
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 220 64% 11%;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -67,6 +72,11 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+
+    /* Custom */
+    --text-color: white;
+    --secondary-color:rgb(239, 68, 68);
+    --secondary-color-light: rgba(239, 68, 68, 0.9);
   }
 }
 
@@ -80,3 +90,23 @@
 }
 
 
+/* Text */
+.primary-text-color {
+  color: var(--text-color);
+}
+
+/* Secondary Text Color */
+.secondary-text-color {
+  color: var(--secondary-color);
+}
+
+/* Secondary Background Color */
+.secondary-bg-color {
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+.secondary-bg-color-light {
+  background-color: var(--secondary-color-light);
+  color: white;
+}
